tests/fixtures/invalid/min_none_int.py
# Cannot call min() with None, Int
x = min(None, 1)
